--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -4,15 +4,17 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <VBox alignment="CENTER" spacing="20.0" minHeight="600" minWidth="800" xmlns:fx="http://javafx.com/fxml/1"
       xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="com.example.onlineservicesemulator.Controller">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-    <children>
+    <HBox>
         <VBox fx:id="checkboxList" layoutX="20.0" layoutY="20.0" prefHeight="161.0" prefWidth="50.0"
               style="-fx-border-color: black; -fx-border-width: 1.0;">
             <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;" />
         </VBox>
-    </children>
+        <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
+    </HBox>
 </VBox>
