--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -11,14 +11,17 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-    <HBox>
+    <HBox spacing="20">
         <VBox fx:id="checkboxList" layoutX="20.0" layoutY="20.0" prefHeight="161.0" prefWidth="50.0"
               style="-fx-border-color: black; -fx-border-width: 1.0;">
-            <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;" />
+            <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
         </VBox>
         <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
+
+        <VBox spacing="20">
+            <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add File"/>
+            <Button fx:id="removeFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Remove File"/>
+        </VBox>
     </HBox>
 
-    <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add File"/>
-    <Button fx:id="removeFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Remove File"/>
 </VBox>
