--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -16,11 +16,13 @@
               style="-fx-border-color: black; -fx-border-width: 1.0;">
             <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
         </VBox>
+        <VBox spacing="20">
         <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
 
-        <VBox spacing="20">
+            <HBox spacing="10">
             <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add File"/>
             <Button fx:id="removeFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Remove File"/>
+            </HBox>
         </VBox>
     </HBox>
 
