--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -17,11 +17,13 @@
             <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
         </VBox>
         <VBox spacing="20">
-        <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
+            <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
 
             <HBox spacing="10">
-            <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add File"/>
-            <Button fx:id="removeFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Remove File"/>
+                <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0"
+                        text="Add File"/>
+                <Button fx:id="removeFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0"
+                        text="Remove File"/>
             </HBox>
         </VBox>
     </HBox>
