--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -14,9 +14,19 @@
     <HBox>
         <VBox fx:id="checkboxList" layoutX="20.0" layoutY="20.0" prefHeight="161.0" prefWidth="50.0"
               style="-fx-border-color: black; -fx-border-width: 1.0;">
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10" />
+            </padding>
             <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;" />
         </VBox>
-        <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
+        <VBox layoutX="20.0" layoutY="20.0" prefHeight="161.0" prefWidth="200.0"
+              style="-fx-border-color: black; -fx-border-width: 1.0;">
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10" />
+            </padding>
+            <Label fx:id="serviceSelected" style="-fx-font-size: 16px; -fx-font-weight: bold;" />
+            <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
+        </VBox>
     </HBox>
     <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add File"/>
 </VBox>
