--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -26,7 +26,7 @@
             <padding>
                 <Insets top="10" right="10" bottom="10" left="10"/>
             </padding>
-            <Label fx:id="serviceSelected" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+            <Label fx:id="selectedService" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
             <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
         </VBox>
         <HBox GridPane.rowIndex="1" GridPane.columnIndex="1" spacing="20" alignment="CENTER">
