--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -21,6 +21,11 @@
             </padding>
             <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
         </VBox>
+        <HBox GridPane.rowIndex="1" GridPane.columnIndex="0" spacing="20" alignment="CENTER">
+            <Button fx:id="connectButton" text="Connect" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+            <Button fx:id="getReportButton" text="Get Report" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        </HBox>
+
         <VBox GridPane.rowIndex="0" GridPane.columnIndex="1" prefHeight="161.0" prefWidth="200.0"
               style="-fx-border-color: black; -fx-border-width: 1.0;">
             <padding>
