--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -48,5 +48,12 @@
             <TextField fx:id="textFieldTemperature" maxWidth="50"/>
             <Button fx:id="buttonTemperature" text="Set Temperature"/>
         </VBox>
+        <VBox fx:id="vboxTripMap" visible="false" GridPane.rowIndex="0" GridPane.columnIndex="2" spacing="20" alignment="CENTER"
+              style="-fx-border-color: black; -fx-border-width: 1.0;">
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10"/>
+            </padding>
+            <Button fx:id="buttonGenerateTripMap" text="Generate Last Trip"/>
+        </VBox>
     </GridPane>
 </VBox>
