--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -24,7 +24,6 @@
         </VBox>
         <HBox GridPane.rowIndex="1" GridPane.columnIndex="0" spacing="20" alignment="CENTER">
             <Button fx:id="connectButton" text="Connect" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <Button fx:id="getReportButton" text="Get Report" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
         </HBox>
 
         <VBox GridPane.rowIndex="0" GridPane.columnIndex="1" prefHeight="161.0" prefWidth="200.0"
@@ -47,6 +46,7 @@
             </padding>
             <TextField fx:id="textFieldTemperature" maxWidth="50"/>
             <Button fx:id="buttonTemperature" text="Set Temperature"/>
+            <Button fx:id="buttonGetClimatizationReport" text="Get Climatization Report"/>
         </VBox>
         <VBox fx:id="vboxTripMap" visible="false" GridPane.rowIndex="0" GridPane.columnIndex="2" spacing="20" alignment="CENTER"
               style="-fx-border-color: black; -fx-border-width: 1.0;">
@@ -54,6 +54,7 @@
                 <Insets top="10" right="10" bottom="10" left="10"/>
             </padding>
             <Button fx:id="buttonGenerateTripMap" text="Generate Last Trip"/>
+            <Button fx:id="buttonGetTripReport" text="Get Trip Report"/>
         </VBox>
     </GridPane>
 </VBox>
