--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -1,60 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.TextField?>
-<VBox alignment="CENTER" spacing="20.0" minHeight="600" minWidth="800" xmlns:fx="http://javafx.com/fxml/1"
-      xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="com.example.onlineservicesemulator.Controller">
+<VBox alignment="CENTER" minHeight="600" minWidth="800" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlineservicesemulator.Controller">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
     <GridPane hgap="20" vgap="10">
-        <VBox fx:id="checkboxList" GridPane.rowIndex="0" GridPane.columnIndex="0" prefHeight="161.0" prefWidth="50.0"
-              style="-fx-border-color: black; -fx-border-width: 1.0;">
+        <VBox fx:id="checkboxList" prefHeight="162.0" prefWidth="435.0"
+              style="-fx-border-color: black; -fx-border-width: 1.0;" GridPane.columnIndex="0" GridPane.rowIndex="0">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
+                <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
-            <Label text="Available Services" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+            <Label style="-fx-font-size: 16px; -fx-font-weight: bold;" text="Available Services"/>
         </VBox>
-        <HBox GridPane.rowIndex="1" GridPane.columnIndex="0" spacing="20" alignment="CENTER">
-            <Button fx:id="connectButton" text="Connect" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+        <HBox alignment="CENTER" spacing="20" GridPane.columnIndex="0" GridPane.rowIndex="1">
+            <Button fx:id="connectButton" text="Connect" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
         </HBox>
 
-        <VBox GridPane.rowIndex="0" GridPane.columnIndex="1" prefHeight="161.0" prefWidth="200.0"
-              style="-fx-border-color: black; -fx-border-width: 1.0;">
+        <VBox prefHeight="161.0" prefWidth="200.0" style="-fx-border-color: black; -fx-border-width: 1.0;"
+              GridPane.columnIndex="1" GridPane.rowIndex="0">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
+                <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
             <Label fx:id="selectedService" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
             <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
         </VBox>
-        <HBox GridPane.rowIndex="1" GridPane.columnIndex="1" spacing="20" alignment="CENTER">
+        <HBox alignment="CENTER" spacing="20" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add File"/>
             <Button fx:id="removeFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0"
                     text="Remove File"/>
         </HBox>
-        <VBox fx:id="vboxTemperature" visible="false" GridPane.rowIndex="0" GridPane.columnIndex="2" spacing="20" alignment="CENTER"
-              style="-fx-border-color: black; -fx-border-width: 1.0;">
+        <VBox fx:id="vboxTemperature" alignment="CENTER" spacing="20"
+              style="-fx-border-color: black; -fx-border-width: 1.0;" visible="false" GridPane.columnIndex="2"
+              GridPane.rowIndex="0">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
+                <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
             <TextField fx:id="textFieldTemperature" maxWidth="50"/>
             <Button fx:id="buttonTemperature" text="Set Temperature"/>
             <Button fx:id="buttonGetClimatizationReport" text="Get Climatization Report"/>
         </VBox>
-        <VBox fx:id="vboxTripMap" visible="false" GridPane.rowIndex="0" GridPane.columnIndex="2" spacing="20" alignment="CENTER"
-              style="-fx-border-color: black; -fx-border-width: 1.0;">
+        <VBox fx:id="vboxTripMap" alignment="CENTER" spacing="20"
+              style="-fx-border-color: black; -fx-border-width: 1.0;" visible="false" GridPane.columnIndex="2"
+              GridPane.rowIndex="0">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
+                <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
             <Button fx:id="buttonGenerateTripMap" text="Generate Last Trip"/>
             <Button fx:id="buttonGetTripReport" text="Get Trip Report"/>
         </VBox>
+        <HBox fx:id="vboxConsole" alignment="TOP_LEFT"
+              style="-fx-border-color: black; -fx-border-width: 1;" GridPane.columnIndex="0"
+              GridPane.rowIndex="3" GridPane.columnSpan="3" maxHeight="80">
+            <TextArea fx:id="textAreaConsole" editable="false" HBox.hgrow="ALWAYS"/>
+        </HBox>
     </GridPane>
 </VBox>
