--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -18,7 +18,7 @@
             <Label style="-fx-font-size: 16px; -fx-font-weight: bold;" text="Available Services"/>
         </VBox>
         <HBox alignment="CENTER" spacing="20" GridPane.columnIndex="0" GridPane.rowIndex="1">
-            <Button fx:id="connectButton" text="Connect" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+            <Button fx:id="sendDataButton" text="Send Data" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
         </HBox>
 
         <VBox prefHeight="161.0" prefWidth="200.0" style="-fx-border-color: black; -fx-border-width: 1.0;"
@@ -50,8 +50,8 @@
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
-            <Button fx:id="buttonGenerateTripMap" text="Generate Last Trip"/>
-            <Button fx:id="buttonGetTripReport" text="Get Trip Report"/>
+            <Button fx:id="buttonGenerateTripMap" text="Generate Trip Map"/>
+            <Button fx:id="buttonGetTripReport" text="Generate Trip Report"/>
         </VBox>
         <HBox fx:id="vboxConsole" alignment="TOP_LEFT"
               style="-fx-border-color: black; -fx-border-width: 1;" GridPane.columnIndex="0"
