--- a/src/main/resources/com/example/onlineservicesemulator/view.fxml
+++ b/src/main/resources/com/example/onlineservicesemulator/view.fxml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 
 <VBox alignment="CENTER" minHeight="600" minWidth="800" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlineservicesemulator.Controller">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-    <GridPane hgap="20" vgap="10">
+    <GridPane hgap="20" vgap="15">
+        <ImageView fx:id="imageViewCockpit" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="3"
+                   preserveRatio="true">
+        </ImageView>
         <VBox fx:id="checkboxList" prefHeight="162.0" prefWidth="435.0"
-              style="-fx-border-color: black; -fx-border-width: 1.0;" GridPane.columnIndex="0" GridPane.rowIndex="0">
+              style="-fx-border-color: black; -fx-border-width: 1.0;" GridPane.columnIndex="0" GridPane.rowIndex="2">
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
             <Label style="-fx-font-size: 16px; -fx-font-weight: bold;" text="Available Services"/>
         </VBox>
-        <HBox alignment="CENTER" spacing="20" GridPane.columnIndex="0" GridPane.rowIndex="1">
-            <Button fx:id="sendDataButton" text="Send Data" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+        <HBox alignment="CENTER" spacing="20" GridPane.columnIndex="0" GridPane.rowIndex="3">
+            <Button fx:id="sendDataButton" text="Send Data" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
         </HBox>
 
-        <VBox prefHeight="161.0" prefWidth="200.0" style="-fx-border-color: black; -fx-border-width: 1.0;"
-              GridPane.columnIndex="1" GridPane.rowIndex="0">
+        <VBox prefHeight="161.0" prefWidth="210.0" style="-fx-border-color: black; -fx-border-width: 1.0;"
+              GridPane.columnIndex="1" GridPane.rowIndex="2">
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
             <Label fx:id="selectedService" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
             <ListView fx:id="filesList" prefHeight="200" prefWidth="160"/>
         </VBox>
-        <HBox alignment="CENTER" spacing="20" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <HBox alignment="CENTER" spacing="20" GridPane.columnIndex="1" GridPane.rowIndex="3">
             <Button fx:id="addFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add File"/>
             <Button fx:id="removeFileButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0"
                     text="Remove File"/>
         </HBox>
         <VBox fx:id="vboxTemperature" alignment="CENTER" spacing="20"
               style="-fx-border-color: black; -fx-border-width: 1.0;" visible="false" GridPane.columnIndex="2"
-              GridPane.rowIndex="0">
+              GridPane.rowIndex="2">
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
@@ -45,17 +54,17 @@
             <Button fx:id="buttonGetClimatizationReport" text="Get Climatization Report"/>
         </VBox>
         <VBox fx:id="vboxTripMap" alignment="CENTER" spacing="20"
-              style="-fx-border-color: black; -fx-border-width: 1.0;" visible="false" GridPane.columnIndex="2"
-              GridPane.rowIndex="0">
+              style="-fx-border-color: black; -fx-border-width: 1.0;"
+              visible="false" GridPane.columnIndex="2" GridPane.rowIndex="2">
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
             <Button fx:id="buttonGenerateTripMap" text="Generate Trip Map"/>
             <Button fx:id="buttonGetTripReport" text="Generate Trip Report"/>
         </VBox>
-        <HBox fx:id="vboxConsole" alignment="TOP_LEFT"
-              style="-fx-border-color: black; -fx-border-width: 1;" GridPane.columnIndex="0"
-              GridPane.rowIndex="3" GridPane.columnSpan="3" maxHeight="80">
+        <HBox fx:id="vboxConsole" alignment="TOP_LEFT" maxHeight="100"
+              style="-fx-border-color: black; -fx-border-width: 1;"
+              GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="5">
             <TextArea fx:id="textAreaConsole" editable="false" HBox.hgrow="ALWAYS"/>
         </HBox>
     </GridPane>
